--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/ravi.singh1520/viz/COVID-19Dashboard_16721100909070/Dashboard1" class="image fit"><img src="images/tableau.png" alt="" /></a>
-									<p>In this project, we have performed queries on our COVID-19 data to generate the required data.<br /> 
-									Data Visualization is done on the generated datasets using Tableau.</p>
+									<p>In this project, we have performed queries on our COVID-19 data to generate the required data.Data Visualization is done on the generated datasets using Tableau.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/ravsingh01/Data_Analysis_Projects/blob/main/Project2_Tableau_Queries.sql" class="button">View Source Code</a></li>
 									</ul>
@@ -93,8 +92,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/ravsingh01/Data_Analysis_Projects/blob/main/Project4_Movie_Correlation.ipynb" class="image fit"><img src="images/movies.jpg" alt="" /></a>
-									<p>We have performed data analysis on the movies dataset using Python.<br />
-									 We have checked for the correlation between the different parameters of movies to identify which parameter is highly correlated to the gross revenue.</p>
+									<p>We have performed data analysis on the movies dataset using Python.We have checked for the correlation between the different parameters of movies to identify which parameter is highly correlated to the gross revenue.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/ravsingh01/Data_Analysis_Projects/blob/main/Project4_Movie_Correlation.ipynb" class="button">View Project</a></li>
 									</ul>
